--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,9 +20,11 @@
             <p><%= @event.description %></p>
           </div>
 
-          <div class="buffer-top">
+          <% if current_user_can_edit?(@event) %>
+            <div class="buffer-top">
               <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
-          </div>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
