--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,10 @@
   <div class="col-md-6 buffer-top">
 
     <%= render 'form' %>
+    <p class="buffer-top">
+      <!-- Ссылка на смену пароля текущего залогиненного юзера (этот путь генерит девайз) -->
+      <%= link_to 'Сменить пароль', edit_user_registration_path %>
+    </p>
 
   </div>
 </div>
