Edit bootstrap forms

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit 'Сохранить', class: 'btn btn-primary' %> или <%= link_to 'вернуться', :back %>
+    <%= f.submit 'Сохранить', class: 'btn btn-success' %> или <%= link_to 'вернуться', :back %>
   </div>
 <% end %>
