--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "BBQ", root_path, class: 'navbar-brand' %>
+        <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <% if user_signed_in? %>
@@ -72,7 +72,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2019</p>
+        <p>&copy; <%= t 'app.company' %> 2019</p>
       </footer>
 
     </div> <!-- /container -->
