--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,6 +23,7 @@
           <% if current_user_can_edit?(@event) %>
             <div class="buffer-top">
               <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
+              <%= link_to 'Удалить', event_path(@event), class: 'btn btn-danger', method: :delete, data: { confirm: t('event.destroy_confirmation') }%>
             </div>
           <% end %>
         </div>
